# MIDILAR

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeOptions.cmake  CMakePresets.json  CTestCustom.cmake  Clock_8cpp.html  Clock_8cpp__incl.map  Clock_8cpp__incl.md5  Clock_8h.html  Clock_8h__dep__incl.map  Clock_8h__dep__incl.md5  Clock_8h__incl.map  Clock_8h__incl.md5  Clock_8h_source.html  MIDILAR_8h.html  MIDILAR_8h__incl.map  MIDILAR_8h__incl.md5  MIDILAR_8h_source.html  MIDILAR__BuildSettings_8h.html  MIDILAR__BuildSettings_8h__dep__incl.map  MIDILAR__BuildSettings_8h__dep__incl.md5  MIDILAR__BuildSettings_8h_source.html  MIDILAR__SystemTools_8h.html  MIDILAR__SystemTools_8h__dep__incl.map  MIDILAR__SystemTools_8h__dep__incl.md5  MIDILAR__SystemTools_8h__incl.map  MIDILAR__SystemTools_8h__incl.md5  MIDILAR__SystemTools_8h_source.html  MidiProcessor_8h.html  MidiProcessor_8h__incl.map  MidiProcessor_8h__incl.md5  MidiProcessor_8h_source.html  STYLE_GUIDE.md  annotated.html  classMIDILAR_1_1MidiProcessor-members.html  classMIDILAR_1_1MidiProcessor.html  classMIDILAR_1_1SystemTools_1_1Clock-members.html  classMIDILAR_1_1SystemTools_1_1Clock.html  classes.html  (+40 more)
examples/: CMakeLists.txt  Examples.dox
examples/AudioFoundation/: CMakeLists.txt
examples/AudioFoundation/LUT/: CMakeLists.txt  LogExpLUT_Plot.cpp  SineLUT_Plot.cpp
examples/BuildTest/: BuildTest.cpp  BuildTest.dox  BuildTest.ino  CMakeLists.txt
examples/BuildTest/CMake/: BuildTest.cpp  CMakeLists.txt
examples/DspCore/: CMakeLists.txt  dspCore.dox
examples/DspCore/Generators/: Generators.dox
examples/DspCore/Transforms/: CMakeLists.txt
examples/MidiCore/: CMakeLists.txt  MidiCore.dox
examples/MidiCore/Message/: Message.dox
examples/MidiCore/MessageParser/: MessageParser.dox
examples/MidiDevices/: CMakeLists.txt
examples/MidiFoundation/: CMakeLists.txt  MidiFoundation.dox
examples/MidiFoundation/Message/: CMakeLists.txt  Message.dox  MidiMessage.cpp
examples/MidiFoundation/MessageParser/: CMakeLists.txt  MessageParser.dox  MessageParser_CallbacksExample.cpp  MessageParser_Example.cpp
examples/MidiProcessor/: CMakeLists.txt
examples/MidiProcessor/ClockGenerator/: CMakeLists.txt  MIDIProcessor_ClockGenerator.cpp
examples/MidiProcessor/MidiEcho/: CMakeLists.txt  MIDIProcessor_MidiEcho.cpp
examples/MidiProcessor/MidiFilter/: CMakeLists.txt  MidiProcessor_MidiFilter.cpp
examples/MidiProcessors/: CMakeLists.txt
examples/MidiProcessors/ChannelReassign/: CMakeLists.txt
examples/SystemCore/: CMakeLists.txt  SystemCore.dox
examples/SystemCore/CallbackHandler/: CallbackHandler.dox
examples/SystemFoundation/: CMakeLists.txt  SystemFoundation.dox
examples/SystemFoundation/CallbackHandler/: CMakeLists.txt  CallbackHandler.dox  CallbackHandler_Example.cpp
examples/SystemFoundation/Clock/: CMakeLists.txt
examples/dspFoundation/: CMakeLists.txt  dspFoundation.dox
examples/dspFoundation/Generators/: CMakeLists.txt  Generators.dox
examples/dspFoundation/LUT/: CMakeLists.txt  LUT.dox
src/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  MIDILAR.dox  MIDILAR.h  MIDILAR_AudioFoundation.h  MIDILAR_BuildSettings.h  MIDILAR_Core.h  MIDILAR_DspCore.h  MIDILAR_MidiCore.h  MIDILAR_MidiDevices.h  MIDILAR_MidiFoundation.h  MIDILAR_MidiProcessors.h  MIDILAR_MidiProtocol.h  MIDILAR_SystemCore.h  MIDILAR_SystemFoundation.h  MIDILAR_UserSetup.h  MIDILAR_dspFoundation.h  MidiProtocol.h
src/AudioFoundation/: CMakeLists.txt  MIDILAR_AudioFoundation.h
src/AudioFoundation/LUT/: BaseLUT.h  CMakeLists.txt  LogExpLUT.h  SineLUT.h
src/Core/: CMakeLists.txt  Core.h  Move.h
src/DspCore/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  DspCore.dox  DspCore.h  Generators.h  Interpolators.h  LUT.h  Streaming.h  Transforms.h
src/DspCore/Generators/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  Envelopes.h  Generators.dox  Noise.h  Periodic.h  Shaping.h  Windowing.h
src/DspCore/Interpolators/: CMakeLists.txt  CMakeOptions.cmake  Interpolators.dox  Linear.h  Trilinear.h
src/DspCore/LUT/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  LUT.dox  LUT.h  LUT1D.h  LUT2D.h  LUT3D.h
src/DspCore/Streaming/: CMakeLists.txt  StreamingBase.h
src/DspCore/Transforms/: CMakeLists.txt  DFT.h  FFT.h
src/MidiCore/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  DeviceBase.h  Message.h  MessageParser.h  MidiCore.dox  MidiCore.h  Protocol.h
src/MidiCore/DeviceBase/: CMakeLists.txt  DeviceBase.cpp  DeviceBase.h
src/MidiCore/Message/: CMakeLists.txt  Message.cpp  Message.dox  Message.h
src/MidiCore/MessageParser/: CMakeLists.txt  MessageParser.cpp  (+2 more)
src/MidiDevices/: CMakeLists.txt  MidiDevices.dox
src/MidiFoundation/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  Defines.h  DeviceBase.h  Enums.h  Message.cpp  Message.h  MessageParser.h  MidiFoundation.dox  MidiFoundation.h  Processor.cpp  Processor.h  Protocol.h
src/MidiProcessor/: CMakeLists.txt  MidiProcessor.cpp  MidiProcessor.h
src/MidiProcessors/: CMakeLists.txt
src/System/: BuildSettings.h  CMakeLists.txt  DependencyResolution.cmake  DependencyResolution.h  ModuleDependencies.cmake  UserSetup.h
src/SystemCore/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  CallbackHandler.h  Clock.h  RingBuffer.h  SystemCore.dox  SystemCore.h
src/SystemFoundation/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  CallbackHandler.h  Clock.cpp  Clock.h  MIDILAR_SystemFoundation.h  SystemFoundation.dox  SystemFoundation.h
src/SystemTools/: CMakeLists.txt  MIDILAR_SystemTools.h
src/dspFoundation/: CMakeLists.txt  CMakeMacros.cmake  CMakeOptions.cmake  Generators.h  Interpolators.h  LUT.h  Streaming.h  Transforms.h  dspFoundation.dox  dspFoundation.h
tests/: CMakeLists.txt
tests/MidiCore/: CMakeLists.txt  MidiFoundation_Protocol.cc
tests/MidiFoundation/: CMakeLists.txt  MidiFoundation_Message.cc  MidiFoundation_Protocol.cc
tests/MidiProcessor/: CMakeLists.txt  MidiProcessor.cc
tests/SystemFoundation/: CMakeLists.txt
tests/SystemTools/: CMakeLists.txt
tests/dspFoundation/: CMakeLists.txt
(+753 files in other folders)
