######################################################################################################
# Add Subdirectories for Tests

    add_subdirectory(MidiEcho)
    add_subdirectory(ClockGenerator)
    add_subdirectory(MidiFilter)
#
######################################################################################################